--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vuepress/plugin-pagination": "^1.0.0-alpha.42",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.42",
     "@vuepress/plugin-register-components": "^1.0.0-alpha.42",
+    "vue": "^2.6.9",
+    "vue-form-generator": "^2.3.4",
     "vuepress": "^1.0.0-alpha.42"
   }
 }
