--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "docs:build": "vuepress build docs && cp 404.md docs/.vuepress/dist/ && cp CNAME docs/.vuepress/dist/"
   },
   "devDependencies": {
+    "@dovyp/plugin-clipboard-copy": "^1.0.0-alpha.3",
     "@vuepress/plugin-active-header-links": "^1.0.0-alpha.42",
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.42",
     "@vuepress/plugin-clean-urls": "^1.0.0-alpha.42",
@@ -15,8 +16,11 @@
     "@vuepress/plugin-pagination": "^1.0.0-alpha.42",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.42",
     "@vuepress/plugin-register-components": "^1.0.0-alpha.42",
+    "@vuepress/plugin-notification": "^1.0.0-alpha.5",
     "vue": "^2.6.9",
     "vue-form-generator": "^2.3.4",
     "vuepress": "^1.0.0-alpha.42"
+  },
+  "dependencies": {
   }
 }
