--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
     "docs:build": "vuepress build docs && cp 404.md docs/.vuepress/dist/ && cp CNAME docs/.vuepress/dist/"
   },
   "devDependencies": {
-    "@dovyp/plugin-clipboard-copy": "^1.0.0-alpha.3",
-    "@vuepress/plugin-active-header-links": "^1.0.0-alpha.42",
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.42",
-    "@vuepress/plugin-clean-urls": "^1.0.0-alpha.42",
-    "@vuepress/plugin-container": "^1.0.0-alpha.42",
-    "@vuepress/plugin-google-analytics": "^1.0.0-alpha.42",
-    "@vuepress/plugin-i18n-ui": "^1.0.0-alpha.42",
-    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.42",
-    "@vuepress/plugin-nprogress": "^1.0.0-alpha.42",
-    "@vuepress/plugin-pagination": "^1.0.0-alpha.42",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.42",
-    "@vuepress/plugin-register-components": "^1.0.0-alpha.42",
-    "@vuepress/plugin-notification": "^1.0.0-alpha.5",
+    "@vuepress/plugin-active-header-links": "next",
+    "@vuepress/plugin-back-to-top": "next",
+    "@vuepress/plugin-clean-urls": "next",
+    "@vuepress/plugin-container": "next",
+    "@vuepress/plugin-google-analytics": "next",
+    "@vuepress/plugin-i18n-ui": "next",
+    "@vuepress/plugin-medium-zoom": "next",
+    "@vuepress/plugin-nprogress": "next",
+    "@vuepress/plugin-pagination": "next",
+    "@vuepress/plugin-pwa": "next",
+    "@vuepress/plugin-register-components": "next",
+    "@vuepress/plugin-notification": "next",
     "vue": "^2.6.9",
     "vue-form-generator": "^2.3.4",
-    "vuepress": "^1.0.0-alpha.42"
+    "vuepress": "next"
   },
   "dependencies": {
   }
