--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
     "docs:build": "vuepress build docs && cp 404.md docs/.vuepress/dist/ && cp CNAME docs/.vuepress/dist/"
   },
   "devDependencies": {
+    "@dovyp/vuepress-plugin-clipboard-copy": "^1.0.0-alpha.7",
     "@vuepress/plugin-active-header-links": "next",
     "@vuepress/plugin-back-to-top": "^1.0.2",
-    "vuepress-plugin-clean-urls": "^1.0.3",
-    "vuepress-plugin-container": "^2.0.2",
     "@vuepress/plugin-google-analytics": "next",
-    "vuepress-plugin-zooming": "^1.1.1",
-    "vuepress-plugin-nprogress": "^1.1.1",
+    "@vuepress/plugin-notification": "next",
     "@vuepress/plugin-pagination": "next",
     "@vuepress/plugin-pwa": "^1.0.2",
     "@vuepress/plugin-register-components": "^1.0.2",
-    "@vuepress/plugin-notification": "next",
-    "@dovyp/vuepress-plugin-clipboard-copy": "^1.0.0-alpha.7",
-    "vuepress-plugin-git-log": "^1.0.1",
-    "vuepress-plugin-copyright": "^1.0.2",
     "vue": "^2.6.10",
     "vue-form-generator": "^2.3.4",
-    "vuepress": "^1.0.2"
+    "vuepress": "^1.0.2",
+    "vuepress-plugin-clean-urls": "^1.0.3",
+    "vuepress-plugin-container": "^2.0.2",
+    "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-git-log": "^1.0.1",
+    "vuepress-plugin-nprogress": "^1.1.1",
+    "vuepress-plugin-zooming": "^1.1.1",
+    "vuepress-plugin-reading-progress": "^1.0.7"
   },
   "dependencies": {
+
   }
 }
