--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuepress/plugin-pagination": "next",
     "@vuepress/plugin-pwa": "^1.0.2",
     "@vuepress/plugin-register-components": "^1.0.2",
+    "vfg-field-array": "0.0.1",
     "vue": "^2.6.10",
     "vue-form-generator": "^2.3.4",
     "vuepress": "^1.0.2",
@@ -20,10 +21,8 @@
     "vuepress-plugin-copyright": "^1.0.2",
     "vuepress-plugin-git-log": "^1.0.1",
     "vuepress-plugin-nprogress": "^1.1.1",
-    "vuepress-plugin-zooming": "^1.1.1",
-    "vuepress-plugin-reading-progress": "^1.0.7"
+    "vuepress-plugin-reading-progress": "^1.0.7",
+    "vuepress-plugin-zooming": "^1.1.1"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
