--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vuepress/plugin-pagination": "next",
     "@vuepress/plugin-pwa": "^1.0.2",
     "@vuepress/plugin-register-components": "^1.0.2",
-    "vfg-field-array": "0.0.1",
+    "vfg-field-array": "^0.0.1",
     "vue": "^2.6.10",
     "vue-form-generator": "^2.3.4",
     "vuepress": "^1.0.2",
