--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "vuepress-plugin-reading-progress": "^1.0.7",
     "vuepress-plugin-zooming": "^1.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vfg-field-object": "^0.0.0-development"
+  }
 }
