--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vfg-field-array": "^0.0.1",
     "vue": "^2.6.10",
     "vue-form-generator": "^2.3.4",
+    "vue-multiselect": "^2.1.6",
     "vuepress": "^1.0.2",
     "vuepress-plugin-clean-urls": "^1.0.3",
     "vuepress-plugin-container": "^2.0.2",
