--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vuepress-plugin-zooming": "^1.1.1"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "vfg-field-object": "^0.0.0-development"
   }
 }
