--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.28",
-    "vfg-field-object": "^0.0.0-development"
+    "vfg-field-object": "^0.0.0-development",
+    "vuepress-plugin-sitemap": "^2.1.2"
   }
 }
