--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
+  "name": "test",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "devDependencies": {
+    "@dovyp/vuepress-plugin-clipboard-copy": "^1.0.0-alpha.7",
+    "@vuepress/plugin-active-header-links": "next",
+    "@vuepress/plugin-back-to-top": "^1.8.2",
+    "@vuepress/plugin-google-analytics": "next",
+    "@vuepress/plugin-notification": "next",
+    "@vuepress/plugin-pagination": "next",
+    "@vuepress/plugin-pwa": "^1.8.2",
+    "@vuepress/plugin-register-components": "^1.8.2",
+    "vfg-field-array": "^0.0.6",
+    "vue": "^2.6.14",
+    "vue-form-generator": "^2.3.4",
+    "vue-multiselect": "^2.1.6",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-clean-urls": "^1.1.2",
+    "vuepress-plugin-container": "^2.1.5",
+    "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-git-log": "^1.0.1",
+    "vuepress-plugin-nprogress": "^1.1.8",
+    "vuepress-plugin-reading-progress": "^1.0.10",
+    "vuepress-plugin-zooming": "^1.1.8"
+  },
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs && cp 404.md docs/.vuepress/dist/ && cp CNAME docs/.vuepress/dist/"
   },
-  "devDependencies": {
-    "@dovyp/vuepress-plugin-clipboard-copy": "^1.0.0-alpha.7",
-    "@vuepress/plugin-active-header-links": "next",
-    "@vuepress/plugin-back-to-top": "^1.0.2",
-    "@vuepress/plugin-google-analytics": "next",
-    "@vuepress/plugin-notification": "next",
-    "@vuepress/plugin-pagination": "next",
-    "@vuepress/plugin-pwa": "^1.0.2",
-    "@vuepress/plugin-register-components": "^1.0.2",
-    "vfg-field-array": "^0.0.1",
-    "vue": "^2.6.10",
-    "vue-form-generator": "^2.3.4",
-    "vue-multiselect": "^2.1.6",
-    "vuepress": "^1.0.2",
-    "vuepress-plugin-clean-urls": "^1.0.3",
-    "vuepress-plugin-container": "^2.0.2",
-    "vuepress-plugin-copyright": "^1.0.2",
-    "vuepress-plugin-git-log": "^1.0.1",
-    "vuepress-plugin-nprogress": "^1.1.1",
-    "vuepress-plugin-reading-progress": "^1.0.7",
-    "vuepress-plugin-zooming": "^1.1.1"
-  },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.28",
-    "vfg-field-object": "^0.0.0-development",
-    "vuepress-plugin-sitemap": "^2.1.2"
+    "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
+    "vfg-field-object": "^0.0.4",
+    "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
