--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
+    "esm": "^3.0.0",
+    "jquery": "^3.6.0",
     "vfg-field-object": "^0.0.4",
+    "vue-router": "^3.5.2",
     "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
